Update Organization and package name for release purposes